<resources>
    <string name="app_name">Movie App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_name">Movie Name</string>
    <string name="drama">Drama</string>
    <string name="ratings">ratings</string>
    <string name="introduction">Introduction :</string>
    <string name="movieimage">MovieImage</string>
    <string name="seemore">ReadMore...</string>
    <string name="title_activity_search_actvity">SearchActvity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="watchlist">watch</string>
    <string name="cancel">Cancel</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_leaderboard">Leaderboard</string>
    <string name="menu_store">Store</string>
    <string name="menu_profile">Profile</string>
    <string name="episodes">Episodes</string>
    <string name="tv_shows_most_popular">TV SHOWS | MOST POPULAR</string>
    <string name="treading_movies">Treading Movies</string>
    <string name="latest_movies">latest Movies</string>
</resources>