<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="epi_desc"
            type="com.example.newsapp.modelClass.episode_information.RootOFEpisodes" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:textAlignment="center"
        tools:context=".SecondActivity">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/imageView"
            android:layout_width="180dp"
            android:layout_height="200dp"
            android:layout_marginStart="19dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="48dp"
            app:cardBackgroundColor="#00838F"
            app:cardCornerRadius="5dp"
            android:background="@color/purple_200"
            app:cardElevation="5dp"
            app:layout_constraintBottom_toTopOf="@+id/tx_container"
            app:layout_constraintEnd_toStartOf="@+id/tx_dura"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                Descimage="@{epi_desc.ep_tvShows.image_thumbnail_path}"
                android:layout_width="180dp"
                android:layout_height="200dp"
                android:contentDescription="@string/movieimage"
                android:scaleType="fitXY" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tx_name"
            android:layout_width="172dp"
            android:layout_height="37dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/movie_name"
            android:padding="5dp"
            android:paddingStart="10dp"
            android:text="@{epi_desc.ep_tvShows.name}"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tx_dura"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tx_dura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:hint="@string/drama"
            android:padding="5dp"
            android:paddingStart="10dp"
            android:text="@{`Genres :`+epi_desc.ep_tvShows.genres}"
            android:textColorHint="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/tx_name" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="125dp"
            android:layout_height="24dp"
            android:layout_marginStart="10dp"

            android:layout_marginEnd="10dp"

            android:hint="@string/ratings"
            android:text="@{`RATINGS : `+epi_desc.ep_tvShows.rating+` / 10`}"
            android:textStyle="bold"

            app:layout_constraintBottom_toTopOf="@+id/tx_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/tx_dura"
            app:layout_constraintVertical_bias="0.075" />

        <TextView
            android:id="@+id/tx_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="-20dp"

            android:layout_marginEnd="16dp"
            android:layout_marginBottom="52dp"
            android:text="@string/introduction"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="#090808"
            android:textSize="16sp"
            android:textStyle="normal|bold"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />


       <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            android:layout_marginEnd="@dimen/dp16"
            android:text="@{`Description  :`+epi_desc.ep_tvShows.description}"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
           android:maxLines="4"
           android:hint="ddkdndddddddddddddddddddddddddddddddddddddndddddddddddddddddddddddddddddddnnnnnnnnndnn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tx_container" />

        <TextView
            android:id="@+id/text_seeMore"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:text="@string/seemore"
            android:layout_marginStart="@dimen/dp16"
            android:textAllCaps="false"
            android:textColor="#A9A9A9"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.953"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:drawableRightCompat="@drawable/ic_down_arrow_down" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>